<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janms.oblig2.SpesificItem">

    <Button
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="34dp"
        android:onClick="onClickClose"
        android:text="@string/back" />

    <LinearLayout
        android:id="@+id/spesificCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spesific2txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spesific1txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spesific3txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spesific4txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spestemplabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:text="@string/temperature"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spestemptxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:text="@string/waitingdot"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spesSpeedLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textAlignment="center"
                android:text="@string/wind_speed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spesSpeedvaltxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:text="@string/waitingdot"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spesdirlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textAlignment="center"
                android:text="@string/wind_direction"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spesdirval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textAlignment="center"
                android:text="@string/waitingdot"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/spesweatherTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textAlignment="center"
            android:text="@string/waitingdot"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/spesweathericon"
            android:layout_width="141dp"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>
</RelativeLayout>
