<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/sky">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/searchRes"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"> </SearchView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textSize="8sp"
                android:onClick="onClickClear"
                android:text="@string/clear_n_history" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/cont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/creditResTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kreditering"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecast"
            android:textAlignment="center"
            android:textSize="16sp" />



        <ListView
            android:id="@+id/forecastList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</RelativeLayout>